--- a/src/assets/Css/SecaoFeedPublicacao.css
+++ b/src/assets/Css/SecaoFeedPublicacao.css
@@ -1,18 +1,9 @@
-.secaoPrincipal {
-    display: flex;
-    border: 2px solid red;
-    padding: 10px;
-}
+.bg-custom {
+    background-color: #27335C;
+    border-color: #27335C;
+  }
 
-.secaoFoto {
-    border: 2px solid green;
-    height: 100px;
-    width: 100px; /* Quadrado */
-    margin-right: 10px;
-}
-
-.secaoPublicacao {
-    border: 2px solid rgb(11, 11, 18);
-    height: 100px;
-    flex: 1; /* Ocupa o restante do espaço */
-}
+  .bg-custom-publicacao {
+    background-color: #B4A6A6;
+  }
+  
