--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap');
 
-body {
+* {
   font-family: 'Barlow Condensed', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
