:sparkles: add página de cadastro

--- a/src/assets/Css/home/Home.css
+++ b/src/assets/Css/home/Home.css
@@ -1,6 +1,6 @@
 .home-principal {
     width: 100%;
-    height: 160vh;
+    /*height: 160vh;*/
     position: relative;
     background-color: #3D475F;
 }
