--- a/src/assets/Css/home/Home.css
+++ b/src/assets/Css/home/Home.css
@@ -1,8 +1,10 @@
 .home-principal {
     width: 100%;
-    /*height: 160vh;*/
+    min-height: 100vh; /* Garante que ocupe ao menos a altura da tela */
     position: relative;
     background-color: #3D475F;
+    display: flex;
+    flex-direction: column; /* Alinha o conteúdo de forma vertical */
 }
 
 .banner-home {
@@ -28,12 +30,12 @@
     margin-top: 20px; /* Espaço entre o banner e o texto */
     text-align: center; /* Centraliza o texto */
     width: 90%; /* Garante que o texto não ultrapasse os limites */
-    margin-left: 100px;
+    margin: 20px auto; /* Centraliza horizontalmente */
 }
+
 .card-home {
-    position: absolute;
-    left: 5%;
     width: 90%; /* Ajusta a largura para manter o conteúdo alinhado */
+    margin: 20px auto; /* Espaçamento automático acima e abaixo */
     background-color: #3D475F; /* Cor de fundo desejada */
     padding: 20px; /* Adiciona espaçamento interno */
     border-radius: 8px; /* Bordas arredondadas (opcional) */
@@ -54,7 +56,6 @@
 }
 
 .footer-home {
-    position: relative;
-    top: 36%;
+    text-align: center; /* Centraliza o conteúdo horizontalmente */
     
 }
