refatorado classes do css para bootstrap em header e footer

--- a/src/assets/Css/header/Header.css
+++ b/src/assets/Css/header/Header.css
@@ -1,6 +1,3 @@
-.header-principal {
-    position: relative;
-}
 
 .header-banner {
     height: 110px;
@@ -10,30 +7,10 @@
 }
 
 .label-principal {
-    position: absolute; /* Permite posicionamento sobre o banner */
-    top: 50%; /* Move para o meio vertical */
-    left: 50%; /* Move para o meio horizontal */
-    transform: translate(-50%, -50%); /* Centraliza o elemento */
-    color: white; /* Ajuste a cor do texto, se necessário */
-    font-size: 35px; /* Ajuste o tamanho do texto conforme necessário */
-    font-weight: bold; /* Torna o texto mais destacado */
-    text-align: center; /* Centraliza o texto, caso haja mais de uma linha */
-}
-
-.login-principal {
-    position: absolute; /* Para posicionar o login fora do fluxo normal */
-    top: 30%; /* Posiciona verticalmente no meio */
-    right: 10px; /* Alinha à direita com um pequeno espaçamento */
-    transform: translateY(-50%); /* Ajusta para que fique perfeitamente centralizado no eixo vertical */
-    display: flex;
-    align-items: center; /* Alinha o texto e o círculo verticalmente */
-    gap: 10px; /* Espaçamento entre o texto e o círculo */
+    height: auto; 
 }
 
 .login-text {
-    color: #f0f0f0;
-    text-decoration: none;
-    font-size: 17px;
     cursor: pointer;
 }
 
@@ -42,11 +19,11 @@
 }
 
 .login-circle {
-    width: 35px; /* Tamanho do círculo */
+    width: 35px;
     height: 35px;
     border-radius: 50%;
-    background-color: #f0f0f0; /* Cor de fundo do círculo */
+    background-color: #f0f0f0;
     overflow: hidden;
-    background-size: cover; /* Ajusta a imagem dentro do círculo */
+    background-size: cover;
     background-position: center;
 }
