--- a/src/assets/Css/feed/FeedPage.css
+++ b/src/assets/Css/feed/FeedPage.css
@@ -2,6 +2,11 @@
     background-color: #3D475F;
     
   }
+
+.container-principal {
+  padding: 3% 15%;
+ 
+}
 .feed-principal {
   display: flex;
   flex-direction: column;
@@ -16,3 +21,8 @@
   
       
 }
+
+.publicacoes-titulo {
+  margin-top: 20px;
+}
+
