--- a/src/assets/Css/feed/SecaoFeedPublicacao.css
+++ b/src/assets/Css/feed/SecaoFeedPublicacao.css
@@ -1,9 +1,21 @@
-.bg-custom {
-    background-color: #27335C;
-    border-color: #27335C;
-  }
-
-  .bg-custom-publicacao {
-    background-color: #B4A6A6;
-  }
+.texto-publicacao {
+  height: 40%;
+  width: 100%; /* Ajuste a largura como necessário */
+  background-color: #B4A6A6; /* Altera a cor do botão */
+  border-color: #B4A6A6; /* Cor da borda combinando com o fundo */
+  color: white; /* Cor do texto para melhor contraste */
   
+  border-radius: 5px; /* Arredonda os cantos do botão */
+  font-size: 30px;
+}
+
+.secao-publicacao {
+  width: 100%;
+  
+  
+}
+
+.foto-Perfil {
+  margin-top: 30px;
+  margin-left: 20px;
+}
