--- a/src/assets/Css/previsao/Previsao.css
+++ b/src/assets/Css/previsao/Previsao.css
@@ -13,3 +13,78 @@
     margin-top: auto; /* Empurra o footer para o final do container */
         
 }
+
+.previsao-busca{
+    text-align: center;
+    margin: 1.5rem;
+}
+
+div.previsao-busca div.busca-group input{
+    width: 30rem;
+    border-radius: 5px 0 0px 5px;
+    outline: none;
+    border: none;
+    padding: 4px 10px;
+    text-align: center;
+}
+
+button{
+    text-decoration: none;
+    color: white;
+    font-size: 17px;
+    transition: all 0.3s ease;
+    outline: none;
+    border: none;
+    background-color: inherit;
+}
+
+.button-busca{
+    background-color: white;
+}
+
+.secao-previsao{
+    width: 100%;
+    height: 50px;
+    background-color: #498F9F;
+    filter: brightness(0.7);
+    display: flex;
+}
+
+.secao-previsao nav{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.secao-previsao nav ul{
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    
+}
+
+.secao-previsao nav ul li{
+    text-decoration: none;
+    color: white;
+    font-size: 17px;
+    transition: all 0.3s ease;
+}
+
+.secao-previsao nav ul button{
+    text-decoration: none;
+    color: white;
+    font-size: 17px;
+    transition: all 0.3s ease;
+    outline: none;
+    border: none;
+    background-color: inherit;
+}
+
+div.previsao-cards{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
