Ajuste na tela de feed

--- a/src/assets/Css/feed/SecaoFeedLine.css
+++ b/src/assets/Css/feed/SecaoFeedLine.css
@@ -1,9 +1,9 @@
-.bg-custom-amigo {
+.bg-custom-foto-line {
     background-color: #27335C;
     border-color: #27335C;
   }
 
-  .secao-feed-text-amigo {
+  .secao-feed-text-foto {
     font-size: 20px; /* Define o tamanho da fonte */
     font-weight: bold;
     margin-top: 10px;
