--- a/src/assets/Css/feed/FeedPage.css
+++ b/src/assets/Css/feed/FeedPage.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh; /* Garante que o container principal ocupe a altura total da tela */
-  background-color: #3D475F;
+  background-color: #212839;
   padding: 0 !important;
 
 }
