--- a/src/assets/Css/feed/SecaoFeedConfig.css
+++ b/src/assets/Css/feed/SecaoFeedConfig.css
@@ -1,62 +1,54 @@
-.bg-custom {
-  background-color: #27335C;
-  border-color: #27335C;
-}
-
+/* Estilos gerais para a seção de configuração do feed */
 .seca-feed-config {
-  height: 360px !important;
+  height: 70%;
+  width: 100%;
+  background-color: #272c3ff5;
+  border-color: #27335C;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
 }
 
+/* Estilo para o texto "Informações" */
+.secao-feed-text-amigo {
+  color: white;
+}
+
+/* Estilo para o topo da seção, onde a foto e o nome do usuário são exibidos */
+.topo {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+/* Estilo para a imagem do usuário */
 .topo img {
-  width: 28%;
-  height: 51px;
+  width: 15%;
+  height: 45px;
   border-radius: 50%;
   margin-top: 10px;
+  margin-left: 20%;
 }
 
+/* Estilo para o nome do usuário */
 .login {
   color: aliceblue;
   margin-left: 10px;
 }
 
-.config-fotos a {
-  display: block;
+/* Estilo para os links de edição de perfil e galeria de fotos */
+.config-fotos {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 1rem;
   text-align: center;
 }
 
-form {
-  box-shadow: none !important; /* Garantindo que o form não tenha sombra */
-  padding: 0; /* Caso o padding também esteja sendo alterado por algum estilo */
-}
-
-textarea {
-  width: 100%;
-  height: 80px;
-  padding: 10px;
-  border-radius: 5px;
-  background: transparent;
-  color: white;
-  border: none;
-  outline: none;
-  resize: none;
-  box-shadow: none;
-}
-
-.btn-salvar {
-  width: 100%;
-  background-color: #5b72bd;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 5px;
-  box-shadow: none; 
-}
-
-.mt-2 {
-  margin-top: -0.5rem !important;
-}
-
+/* Estilo para os links personalizados */
 .link-custom {
   text-decoration: none;
+  color: white;
+  margin-bottom: 0.5rem;
 }
