--- a/src/assets/Css/feed/SecaoModal.css
+++ b/src/assets/Css/feed/SecaoModal.css
@@ -97,7 +97,7 @@
     transform: scale(1.1); /* Aumenta o tamanho ao passar o mouse */
   }
   
-  .upload-icon-container {
+  .upload-icon-container-modal {
     width: 50px;
     height: 50px;
     background-color: #1a2035; /* Cor de fundo */
@@ -109,16 +109,15 @@
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
   }
   
-  .upload-icon-container:hover {
+  .upload-icon-container-modal:hover {
     background-color: #5E1515; /* Cor de fundo ao passar o mouse */
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2); /* Sombra mais intensa */
   }
   
-  .upload-icon {
+  .upload-icon-modal {
     font-size: 24px;
     color: #D9D9D9; /* Cor do ícone */
-    width: 25px;
-    height: 25px;
+
     transition: color 0.3s ease;
   }
   
